# AQuicMeasurement

./: .gitignore  CMakeLists.txt  README.md
cert/: README.md
measurments/: README.md
ms_sample/: README.md  ms_sample.c
scripts/: README.md  measure_cpu.sh  quic_measure_cpu.sh  run_clients.sh  tcp_measure_cpu_servers.sh
src/: quic_client.c  quic_server.c  quic_w_datag.c  quic_w_stream.c  tcp_conn.c
